[package]
name = "SoNoForevis"
version = "0.1.0"
edition = "2024"

[dependencies]
monoio = { version = "0.2", features = ["iouring"] }
socket2 = "0.5"
libc = "0.2"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
opt-level = 3